--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,73 +1,76 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+ 
+@layer base {
+  :root {
+    --background: 0 0% 100%;
+    --foreground: 222.2 84% 4.9%;
 
+    --card: 0 0% 100%;
+    --card-foreground: 222.2 84% 4.9%;
+ 
+    --popover: 0 0% 100%;
+    --popover-foreground: 222.2 84% 4.9%;
+ 
+    --primary: 222.2 47.4% 11.2%;
+    --primary-foreground: 210 40% 98%;
+ 
+    --secondary: 210 40% 96.1%;
+    --secondary-foreground: 222.2 47.4% 11.2%;
+ 
+    --muted: 210 40% 96.1%;
+    --muted-foreground: 215.4 16.3% 46.9%;
+ 
+    --accent: 210 40% 96.1%;
+    --accent-foreground: 222.2 47.4% 11.2%;
+ 
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 210 40% 98%;
 
-/* ////// */
-
-#blob{
-    background-color: #fff;
-    position: absolute;
-    height: 300px;
-    width: 200px;
-    border-radius:1000px;
-    background: linear-gradient(to right, rgb(255, 166, 0),rgb(255, 140, 0));
-    filter: blur(150px);
-    translate:  -100px -100px;
-    z-index: -1;
-    animation: rotate 20s infinite;
-}
-@keyframes rotate{
-    from{
-        rotate: 0deg;
-    }
-    to{
-        rotate: 360deg;
-    }
-}
-
-/* .work{
-
-} */
-
-.under::after{
-    position:absolute;
-    content: '';
-    height: 2px;
-    width: 0px;
-    background-color: rgb(255, 115, 0);
-    top: 55px;
-    /* opacity: 0; */
-    transition: all 0.1s ease-in-out;
-
-}
-
-.under:hover::after{
-    width: 80px;
-}
-
-.title{
-    animation: horizontalscroll 3s ease-in-out 0s infinite;
-}
-
-@keyframes horizontalscroll {
-    
-    0% {
-        transform: translateX(0%);
-        /* opacity: 0; */
-    }
-    100% {
-        transform: translateX(-100%);
-        /* opacity: 0; */
-    }
-}
-
-.on{
-    opacity: 1;
-    transform: translateY(10px);
-}
-
-.navbar.trans {
-    transform: translateY(-100%);
-    transition: 3ms ease-in-out;
+    --border: 214.3 31.8% 91.4%;
+    --input: 214.3 31.8% 91.4%;
+    --ring: 222.2 84% 4.9%;
+ 
+    --radius: 0.5rem;
   }
+ 
+  .dark {
+    --background: 222.2 84% 4.9%;
+    --foreground: 210 40% 98%;
+ 
+    --card: 222.2 84% 4.9%;
+    --card-foreground: 210 40% 98%;
+ 
+    --popover: 222.2 84% 4.9%;
+    --popover-foreground: 210 40% 98%;
+ 
+    --primary: 210 40% 98%;
+    --primary-foreground: 222.2 47.4% 11.2%;
+ 
+    --secondary: 217.2 32.6% 17.5%;
+    --secondary-foreground: 210 40% 98%;
+ 
+    --muted: 217.2 32.6% 17.5%;
+    --muted-foreground: 215 20.2% 65.1%;
+ 
+    --accent: 217.2 32.6% 17.5%;
+    --accent-foreground: 210 40% 98%;
+ 
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 210 40% 98%;
+ 
+    --border: 217.2 32.6% 17.5%;
+    --input: 217.2 32.6% 17.5%;
+    --ring: 212.7 26.8% 83.9%;
+  }
+}
+ 
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
